# opengl-test

./: .clang-format  .gitignore  README.md  meson.build
resources/shaders/: default.glsl  simple_renderer.glsl
resources/textures/: CREDITS.txt
src/: meson.build
src/opengl/: gl_errors.cpp  index_buffer.cpp  meson.build  shader.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp
src/opengl/include/opengl/: gl_errors.hpp  index_buffer.hpp  shader.hpp  texture.hpp  vertex_array.hpp  vertex_buffer.hpp
src/test_opengl/: meson.build  simple_renderer.cpp  test_opengl.cpp
