executable('test_opengl', [
    'test_opengl.cpp'
], link_with : [
    opengl,
], dependencies : [
    dependency('glfw3'),
], include_directories : [
    opengl_inc,
])

executable('simple_renderer', [
    'simple_renderer.cpp'
], link_with : [
    opengl,
], dependencies : [
    dependency('glfw3'),
], include_directories : [
    opengl_inc,
])